--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,12 +22,15 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.30.0",
+    "@types/dompurify": "^3.0.5",
     "d3-drag": "^3.0.0",
     "d3-force": "^3.0.0",
     "d3-scale": "^4.0.0",
     "d3-selection": "^3.0.0",
     "d3-zoom": "^3.0.0",
+    "dompurify": "^3.3.1",
     "lucide-svelte": "^0.575.0",
+    "marked": "^17.0.3",
     "pocketbase": "^0.21.0",
     "roughjs": "^4.6.0"
   },
